--- a/src/main/resources/GameMasterView.fxml
+++ b/src/main/resources/GameMasterView.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1"
             prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.171">
+            xmlns="http://javafx.com/javafx/8.0.171"
+            styleClass="game-master">
     <bottom>
         <HBox prefWidth="300.0"
               BorderPane.alignment="CENTER"
