--- a/src/main/resources/PresentationView.fxml
+++ b/src/main/resources/PresentationView.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1"
             prefWidth="1024.0"
-            xmlns="http://javafx.com/javafx/8.0.171">
+            xmlns="http://javafx.com/javafx/8.0.171"
+            styleClass="presentation">
     <BorderPane AnchorPane.bottomAnchor="0.0"
                 AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0"
