--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXDrawer?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1"
+            styleClass="root"
             prefHeight="720.0"
             prefWidth="1280.0"
             xmlns="http://javafx.com/javafx/8.0.171">
